# hermes-mobile-push-plugin

./: .gitignore  Makefile  README.md  __init__.py  api.py  plugin.yaml  policy.py  pyproject.toml  sender.py  store.py  triggers.py
dashboard/: manifest.json  plugin_api.py
hermes_push/: __init__.py  api.py  policy.py  sender.py  store.py  triggers.py  wsclient.py
tests/: conftest.py  pytest.ini  test_api.py  test_policy.py  test_register.py  test_sender.py  test_store.py  test_triggers.py  test_wiring.py
